--- a/samples/Sample.MinimalApi/Sample.MinimalApi.csproj
+++ b/samples/Sample.MinimalApi/Sample.MinimalApi.csproj
@@ -12,8 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AspNetCore.Extensions.Diagnostics\AspNetCore.Extensions.Diagnostics.csproj" />
-    <ProjectReference Include="..\..\src\AspNetCore.Extensions.SecurityKey\AspNetCore.Extensions.SecurityKey.csproj" />
+    <ProjectReference Include="..\..\src\AspNetCore.SecurityKey\AspNetCore.SecurityKey.csproj" />
     <ProjectReference Include="..\Sample.Shared\Sample.Shared.csproj" />
   </ItemGroup>
 
