--- a/samples/Sample.Controllers/Sample.Controllers.csproj
+++ b/samples/Sample.Controllers/Sample.Controllers.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Sample.Shared\Sample.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Bogus" Version="35.5.1" />
+  </ItemGroup>
+
 </Project>
