--- a/samples/Sample.MinimalApi/Sample.MinimalApi.csproj
+++ b/samples/Sample.MinimalApi/Sample.MinimalApi.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Sample.Shared\Sample.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Bogus" Version="35.5.1" />
+  </ItemGroup>
+
 </Project>
