--- a/test/AspNetCore.SecurityKey.Tests/AspNetCore.SecurityKey.Tests.csproj
+++ b/test/AspNetCore.SecurityKey.Tests/AspNetCore.SecurityKey.Tests.csproj
@@ -15,8 +15,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="xunit" Version="2.8.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
+    <PackageReference Include="xunit" Version="2.9.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -31,7 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Bogus" Version="35.5.1" />
+    <PackageReference Update="Bogus" Version="35.6.0" />
+    <PackageReference Update="XUnit.Hosting" Version="1.7.1" />
   </ItemGroup>
 
 </Project>
