--- a/samples/Sample.MinimalApi/appsettings.json
+++ b/samples/Sample.MinimalApi/appsettings.json
@@ -5,6 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SecurityKey": "01HSGVBGWXWDWTFGTJSYFXXDXQ;01HSGVBSF99SK6XMJQJYF0X3WQ",
+  "SecurityKey": {
+    "AllowedKeys": [
+      "01HSGVBGWXWDWTFGTJSYFXXDXQ",
+      "01HSGVBSF99SK6XMJQJYF0X3WQ"
+    ],
+    "AllowedAddresses": [
+      "127.0.0.1", // IPv4 localhost
+      "::1" // IPv6 localhost
+    ],
+    "AllowedNetworks": [
+      "192.168.0.0/16" // Local network
+    ]
+  },
   "AllowedHosts": "*"
 }
