--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup Label="Package">
-    <Description>API Key Authentication Implementation for ASP.NET Core</Description>
+    <Description>Flexible and comprehensive API key authentication library for ASP.NET Core with support for headers, query parameters, cookies, custom validation, middleware patterns, and seamless integration with ASP.NET Core's authentication infrastructure</Description>
     <Copyright>Copyright © $([System.DateTime]::Now.ToString(yyyy)) LoreSoft</Copyright>
     <Authors>LoreSoft</Authors>
     <NeutralLanguage>en-US</NeutralLanguage>
